# dapa-vm

./: README.md
assembler/: Cargo.toml
assembler/src/: lib.rs  opcode.rs
ast/: Cargo.toml
ast/src/: expressions.rs  program.rs
ast/src/functions/: declared.rs  mod.rs
ast/src/token/: mod.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/src/environment/: mod.rs
builder/src/environment/xstd/: array.rs  integer.rs  map.rs  mod.rs  optional.rs  range.rs  string.rs
builder/src/manager/: enum.rs  mod.rs  struct.rs
builder/src/mapper/: function.rs  mod.rs
bytecode/: Cargo.toml
bytecode/src/: module.rs
compiler/: Cargo.toml
compiler/src/: error.rs  lib.rs
environment/: Cargo.toml
environment/src/: error.rs  function.rs  lib.rs
interpreter/: Cargo.toml
interpreter/src/: error.rs  lib.rs  stack.rs  state.rs
lexer/: Cargo.toml
lexer/src/: lib.rs
parser/: Cargo.toml
parser/src/: context.rs  error.rs  lib.rs  mapper.rs
types/: Cargo.toml
vm/: Cargo.toml
vm/benches/: vm.rs
vm/src/: error.rs  iterator.rs  lib.rs  stack.rs  validator.rs
vm/src/chunk/: mod.rs  reader.rs
vm/src/instructions/: constructor.rs  impl.rs  iterator.rs  mod.rs  operator.rs
vm/src/tests/: full.rs  mod.rs  op_code.rs
