[package]
name = "dapa-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
dapa-ast = { path = "../ast" }
dapa-bytecode = { path = "../bytecode" }
dapa-types = { path = "../types" }
dapa-environment = { path = "../environment" }
thiserror = "2.0.1"
log = "0.4.22"

[dev-dependencies]
dapa-builder = { path = "../builder" }
dapa-lexer ={ path = "../lexer" }
dapa-parser = { path = "../parser" }
