[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
dapa-types = { path = "../types" }
dapa-ast = { path = "../ast" }
dapa-environment = { path = "../environment" }
thiserror = "2.0.1"

[dev-dependencies]
dapa-ast = { path = "../ast" }
dapa-lexer ={ path = "../lexer" }
dapa-parser = { path = "../parser" }
dapa-builder = { path = "../builder" }