[package]
name = "dapa-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
dapa-ast = { path = "../ast" }
dapa-types = { path = "../types" }
dapa-builder = { path = "../builder" }
dapa-environment = { path = "../environment" }
log = "0.4.22"
thiserror = "2.0.3"
indexmap = { version = "2.7.0", features = ["serde"] }
