[package]
name = "dapa-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
dapa-bytecode = { path = "../bytecode" }
dapa-types = { path = "../types" }
dapa-environment = { path = "../environment" }
thiserror = "2.0.3"

[dev-dependencies]
dapa-builder = { path = "../builder" }
dapa-lexer ={ path = "../lexer" }
dapa-parser = { path = "../parser" }
dapa-compiler = { path = "../compiler" }
criterion = "0.5.1"

[[bench]]
name = "vm"
harness = false
